[gd_scene load_steps=5 format=3 uid="uid://du7nerpvcowt3"]

[ext_resource type="Texture2D" uid="uid://dehk3m62i1ist" path="res://assets/icons/arrow_left.png" id="1_wghfj"]
[ext_resource type="Script" path="res://scenes/arrow_button.gd" id="1_ym8rf"]

[sub_resource type="Animation" id="Animation_cetln"]
resource_name = "bubble_up"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%TheButton/..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u46j4"]
_data = {
"bubble_up": SubResource("Animation_cetln")
}

[node name="ArrowButton" type="AspectRatioContainer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(20, 20)
mouse_filter = 2
script = ExtResource("1_ym8rf")

[node name="TheButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
texture_normal = ExtResource("1_wghfj")
ignore_texture_size = true
stretch_mode = 4

[node name="ArrowButtonAnimationPlayer" type="AnimationPlayer" parent="TheButton"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_u46j4")
}
